blacklist/whitelist overhaul